fix(cors): usa nome direto da env var no @Value — relaxed binding nao se aplica